# wsjcpp-yaml

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_simple.sh  clean.sh  msvc2015x86_build_simple.bat  parser_yaml.py  wsjcpp-yaml.cbproj  wsjcpp.yml
.github/workflows/: cmake-multi-platform.yml
src/: examples.h  main.cpp  wsjcpp_yaml.cpp  wsjcpp_yaml.h
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/wsjcpp-core/: wsjcpp_core.cpp  wsjcpp_core.h
src.wsjcpp/wsjcpp_core/: wsjcpp_unit_tests.h
src/examples/: example_iterate_array.cpp  example_operators.cpp
src/lib/: CMakeLists.txt
src/lib/include/wsjcpp/: wsjcpp_yaml.h
src/lib/src/: wsjcpp_yaml.cpp  yaml.cpp
src/lib/test/: CMakeLists.txt  test_append_elements.cpp  test_cleanup.cpp  test_cursor.cpp  test_failed.cpp  test_line_parser.cpp  yaml_test.cpp
src/tests/: CMakeLists.txt  get_current_rss.h  helpers.h  test_append_element_issue_30.cpp  test_append_elements.cpp  test_auto_quotes.cpp  test_cleanup.cpp  test_cursor.cpp  test_double_value.cpp  test_float_value.cpp  test_keep_format.cpp  test_line_parser.cpp  test_memory_leaks.cpp  test_memory_leaks_linux.cpp  test_parser_comments.cpp  test_python_yaml_issue_33.cpp  test_read_write_file.cpp  test_read_wsjcpp_hold_yaml.cpp  test_read_yaml.cpp  test_remove_element_from_array.cpp  test_remove_element_from_map.cpp  test_tag_names.cpp  test_yaml_parser_all.cpp  test_yaml_parser_array_included_map.cpp  test_yaml_parser_hierarchical_map.cpp  test_yaml_parser_quotes.cpp  test_yaml_parser_simple_array.cpp  test_yaml_parser_simple_map.cpp
src/tests/data/: remove-element-from-array.yml
src/tests/data-tests/float-double/: example.yml
src/tests/data-tests/python_yaml_issue_33/: example.yaml  gen.py
src/tests/data-tests/read-write-file/: docker-compose.output.yml
src/tests/data/for-memory-leak/: some.yml
src/tests/data/read-write-file/: docker-compose.yml
unit-tests/: .gitignore  CMakeLists.txt
unit-tests.wsjcpp/: CMakeLists.txt  parser_yaml.py
unit-tests.wsjcpp/data-tests/: parser-simple-array.yml
unit-tests.wsjcpp/data-tests/read-file/example-voiting-app/: docker-compose.yml
unit-tests.wsjcpp/data-tests/read-file/float-double/: example.yml
unit-tests.wsjcpp/data-tests/read-write-file/: docker-compose.yml
unit-tests.wsjcpp/src/: process_mem_usage.h  unit_test_append_elements.cpp  unit_test_cleanup.cpp  unit_test_cursor.cpp  unit_test_float_double.cpp  unit_test_keep_format.cpp  unit_test_line_parser.cpp  unit_test_line_parser.h  unit_test_memory_leaks.cpp  unit_test_read_write_file.cpp  unit_test_read_wsjcpp_hold_yaml.cpp  unit_test_read_yaml.cpp  unit_test_remove_element_for_map.cpp  unit_test_remove_element_in_array.cpp  unit_test_tag_names.cpp  unit_test_yaml_parser_all.cpp  unit_test_yaml_parser_all.h  unit_test_yaml_parser_array_included_map.cpp  unit_test_yaml_parser_array_included_map.h  unit_test_yaml_parser_comments.cpp  unit_test_yaml_parser_comments.h  unit_test_yaml_parser_hierarchical_map.cpp  unit_test_yaml_parser_hierarchical_map.h  unit_test_yaml_parser_quotes.cpp  unit_test_yaml_parser_quotes.h  unit_test_yaml_parser_simple_array.cpp  unit_test_yaml_parser_simple_array.h  unit_test_yaml_parser_simple_map.cpp  unit_test_yaml_parser_simple_map.h
unit-tests/src/: main.cpp  unit_test_line_parser.cpp  unit_test_yaml_parser.cpp  unit_test_yaml_parser.h  unit_test_yaml_parser_all.h  unit_test_yaml_parser_array_included_map.cpp  unit_test_yaml_parser_comments.h  unit_test_yaml_parser_hierarchical_map.cpp  unit_test_yaml_parser_quotes.h  unit_test_yaml_parser_simple_array.cpp  unit_test_yaml_parser_simple_array.h  unit_test_yaml_parser_simple_map.cpp  unit_test_yaml_parser_simple_map.h  unit_tests.cpp  unit_tests.h
unit-tests/src.wsjcpp/: CMakeLists.txt
unit-tests/src.wsjcpp/wsjcpp-logger/: fallen.cpp  fallen.h
